Remove beta-only flag for the lens calibration

--- a/octoprint_mrbeam/templates/settings/camera_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/camera_settings.jinja2
@@ -182,7 +182,7 @@
                         {{ _('Start') }}
                     </button>
                 </div>
-                <div class="rounded_container calibration-container experimental_feature_beta" style="display: block">
+                <div class="rounded_container calibration-container" style="display: block">
                     <div class="rounded_container_title" style="text-transform: uppercase;">{{ _('Lens Calibration') }}</div>
                     <hr class="rounded_container_hr">
                     <p>{{ _('The lens calibration is made to remove the fish-eye effect from the picture. Only do this if you think that your camera precision is bad, specially in the center.') }}</p>
