--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -88,6 +88,48 @@ a,
   padding-right: 0.5em;
 }
 
+/*    Job Time Estimation in Conversion Dialog        */
+#jobTimeEstimationCard {
+  position: absolute;
+  right: 0;
+  bottom: -2px;
+  padding: 0.2em 0.5em 0em;
+  border: 1px solid #ddd;
+  border-bottom: none;
+  border-radius: 0.5em 0.5em 0 0;
+  /*background: #fff;*/
+  background: linear-gradient(0deg, #f5f5f5, white);
+  width: 20%;
+  min-width: 15em;
+}
+
+#jobTimeEstimationCard ul {
+  margin: 0.5em 0 0 0.5em;
+}
+
+#job_time_estimation_detailed ul li {
+  list-style: none;
+}
+#job_time_estimation_detailed ul li div.icon {
+  height: 1em;
+  width: 1em;
+  display: inline-block;
+  box-shadow: 1px 1px 2px 2px #00000024;
+  border-radius: 0.15em;
+  background-position: center center;
+  background-size: contain;
+}
+
+#job_time_estimation_detailed ul li label {
+  display: inline-block;
+  padding: 0 0.2em;
+}
+#job_time_estimation_detailed ul li span.duration {
+  position: absolute;
+  right: 0;
+}
+/*    End Job Time Estimation in Conversion Dialog        */
+
 #photo_preview {
   width: 400px;
   height: 300px;
@@ -374,19 +416,6 @@ body.vectorDrag .color_drop_zone.create_job.hover {
 
 body.colorDragInProgress #drop_overlay {
   display: none;
-}
-
-#job_time_estimation_detailed ul li {
-  list-style: none;
-}
-#job_time_estimation_detailed ul li div {
-  height: 1em;
-  width: 1em;
-  display: inline-block;
-  box-shadow: 1px 1px 2px 2px #00000024;
-  border-radius: 0.15em;
-  background-position: center center;
-  background-size: contain;
 }
 
 .checkInput {
