--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -96,11 +96,22 @@ a,
   padding: 0.2em 0.5em 0em;
   border: 1px solid #ddd;
   border-bottom: none;
-  border-radius: 0.5em 0.5em 0 0;
+  border-radius: 8px 8px 0 0;
   /*background: #fff;*/
   background: linear-gradient(0deg, #f5f5f5, white);
   width: 20%;
   min-width: 15em;
+}
+
+#jobTimeEstimationCard a.dropdown .caret {
+  transform: rotate(0deg);
+  margin-left: 0.6em;
+  color: #ddd;
+  border-top-color: #5c5c5c;
+  transition: transform 0.3s linear;
+}
+#jobTimeEstimationCard a.dropdown.collapsed .caret {
+  transform: rotate(180deg);
 }
 
 #jobTimeEstimationCard ul {
