--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -385,10 +385,10 @@
                                                 {{ _('Clusters are processed successively and each cluster is processed line by line.') }}
                                                 {{ _('This option reduces \'empty rides\' moderately and <b>gives the best precision</b>.') }}
                                         </li>
-									    <li><b>{{ _('Fast:') }}</b>
+<!--									    <li><b>{{ _('Fast:') }}</b>
                                                 {{ _('Aggressive clustering also of smaller objects to reduce \'empty rides\' as much as possible.') }}
 									            {{ _('The higher speed might compromise the precision of some engravings, but <b>works well with text or clip-art design.</b>') }}
-									    </li>
+									    </li>-->
 									    <li><b>{{ _('Basic:') }}</b>
                                                 {{ _('No clustering at all, the engravings are processed line by line. In this mode the laserhead may have a lot of \'empty rides\' making it slower, but the precision is not compromised.') }}
                                                 {{ _('<b>Use this option as fallback</b> if you\'re experiencing issues with the other options.') }}</li>
@@ -516,7 +516,7 @@
 									    {{ _('The effect in general is dependent from the material and its color and surface.') }}">
                                     <label class="control-label">{{ _('Speed') }}</label>
                                     <div class="controls"><input class="param_feedrate speed_input" type="number"
-                                                                 data-bind="event: {change: function(){flag_customized_material(); estimated_job_time_trigger(Date.now());}}"
+                                                                 data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
                                                                  onblur="window.mrbeam.colorDragging.checkConversionParameters()"/>&nbsp;{{ _('mm/min') }}
                                     </div>
                                 </div>
@@ -552,12 +552,12 @@
                                     <label class="control-label">{{ _('Passes') }}</label>
                                     <div class="controls">
                                         <input
-                                            data-bind="event: {change: function(){flag_customized_material(); estimated_job_time_trigger(Date.now());}}"
+                                            data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
                                             class="param_passes passes_input cut_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
                                         <span style="display: inline-block">
                                             <label data-bind="visible: showExpertSettings">
                                                 <input
-                                                    data-bind="event: {change: function(){flag_customized_material(); estimated_job_time_trigger(Date.now());}}"
+                                                    data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
                                                     type="checkbox" class="param_progressive"/>
                                                 {{ _('progressive') }}
                                             </label>
@@ -574,7 +574,7 @@
                                          <i>{{ _('Try 100ms and adjust if needed.') }}</i>">
                                     <label class="control-label">{{ _('Pierce time') }}</label>
                                     <div class="controls"><input
-                                                            data-bind="event: {change: function(){flag_customized_material(); estimated_job_time_trigger(Date.now());}}"
+                                                            data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
                                                             class="param_piercetime pierce_time_input"
                                                             type="number"/>&nbsp;{{ _('ms') }}</div>
                                 </div>
