--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -897,8 +897,9 @@
 									</g>
 									<g id="crosshair" transform="matrix(1, 0, 0, 1, -20, -20)"
 									   data-bind="attr: { transform: scaleMatrixCrosshair()}">
-										<circle r="0.5" cy="0" cx="0" />
+										<circle class="dot" r="0.5" cy="0" cx="0" />
 										<path d="M-15,0H-5M15,0H5M0,15V5M0,-15V-5" />
+										<circle class="dragger" r="10" cy="0" cx="0" />
 									</g>
 									<g id="camera_markers" fill="#ffffff" stroke="#ff00ff" stroke-width="5"
 									   data-bind="attr: { class: camera.markerMissedClass() }">
