move laserhead by crosshair dragging. quick shape line.

--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -899,6 +899,7 @@
 									   data-bind="attr: { transform: scaleMatrixCrosshair()}">
 										<circle class="dot" r="0.5" cy="0" cx="0" />
 										<path d="M-15,0H-5M15,0H5M0,15V5M0,-15V-5" />
+                                        <path d="M-10,0H-7M10,0H7M0,10V7M0,-10V-7" style="transform: rotate(45deg);" />
 										<circle class="dragger" r="13" cy="0" cx="0" />
 									</g>
 									<g id="camera_markers" fill="#ffffff" stroke="#ff00ff" stroke-width="5"
