https instead of http

--- a/octoprint_mrbeam/templates/lasersafety_genericbody.jinja2
+++ b/octoprint_mrbeam/templates/lasersafety_genericbody.jinja2
@@ -124,7 +124,7 @@
                 {{ _('If you decide to not be reminded on every login, we need to store your agreement on our servers.') }}
                 {{ _('This includes your login email address and technical device data.') }}<br />
                 {# Check our <a href="http://shop.mr-beam.org/privacy" target="_blank" style="color:grey; text-decoration: underline;">privacy statement</a> for details. #}
-                {{ _("Check our %(open)sprivacy statement%(close)s for details.", open='<a href="http://mr-beam.org/privacy-policy" target="_blank" style="color:grey; text-decoration: underline;">', close='</a>')|safe }}
+                {{ _("Check our %(open)sprivacy statement%(close)s for details.", open='<a href="https://mr-beam.org/privacy-policy" target="_blank" style="color:grey; text-decoration: underline;">', close='</a>')|safe }}
             </small></li>
         </ul>
     </label>
