--- a/octoprint_mrbeam/templates/settings/debug_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/debug_settings.jinja2
@@ -30,30 +30,33 @@
                 </div>
             </div>
 
-            <h5>{{ _('Terminal') }}</h5>
+            {% if env == 'DEV' %}
 
-            <div class="control-group">
-    {#            <label class="control-label" for="settings-debug-terminal">{{ _('Enable terminal') }}</label>#}
-                <div class="controls">
-                    <label class="checkbox">
-                        <input type="checkbox" data-bind="checked: settings.plugins.mrbeam.terminal">
-                        <strong>{{ _('Enable terminal') }}</strong>
-                        <div>{{ _('Requires full page reload: <strong>Shift + F5</strong> (Windows and Linux) or <strong>Ctrl + Shift + r</strong> (Mac)') }}</div>
-                    </label>
+                <h5>{{ _('Terminal') }}</h5>
+
+                <div class="control-group">
+        {#            <label class="control-label" for="settings-debug-terminal">{{ _('Enable terminal') }}</label>#}
+                    <div class="controls">
+                        <label class="checkbox">
+                            <input type="checkbox" data-bind="checked: settings.plugins.mrbeam.terminal">
+                            <strong>{{ _('Enable terminal') }}</strong>
+                            <div>{{ _('Requires full page reload: <strong>Shift + F5</strong> (Windows and Linux) or <strong>Ctrl + Shift + r</strong> (Mac)') }}</div>
+                        </label>
+                    </div>
                 </div>
-            </div>
 
-            <div class="control-group">
-    {#            <label class="control-label" for="settings-debug-terminal">{{ _('Enable terminal') }}</label>#}
-                <div class="controls">
-                    <label class="checkbox">
-                        <input type="checkbox" data-bind="checked: settings.plugins.mrbeam.terminal_show_checksums">
-                        <strong>{{ _('Show checksums') }}</strong>
-                        <div>{{ _('Show gcode command checksums in terminal. Takes effect immediately.') }}</div>
-                    </label>
+                <div class="control-group">
+        {#            <label class="control-label" for="settings-debug-terminal">{{ _('Enable terminal') }}</label>#}
+                    <div class="controls">
+                        <label class="checkbox">
+                            <input type="checkbox" data-bind="checked: settings.plugins.mrbeam.terminal_show_checksums">
+                            <strong>{{ _('Show checksums') }}</strong>
+                            <div>{{ _('Show gcode command checksums in terminal. Takes effect immediately.') }}</div>
+                        </label>
+                    </div>
                 </div>
-            </div>
 
+            {% endif %}
 
         <h5>{{ _('Device State') }}</h5>
             <div class="control-group">
