handled support mode

--- a/octoprint_mrbeam/templates/settings/debug_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/debug_settings.jinja2
@@ -30,7 +30,7 @@
                 </div>
             </div>
 
-            {% if env == 'DEV' %}
+            {% if env == 'DEV' or env_support_mode %}
 
                 <h5>{{ _('Terminal') }}</h5>
 
