--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -600,7 +600,7 @@
         </div>
     </div>
     <div style="position: relative; height: 0;">
-        <div id="jobTimeEstimationCard">
+        <div id="jobTimeEstimationCard" data-bind="visible: showJobTimeEstimation()">
             <a href="#" class="dropdown collapsed" data-toggle="collapse" data-target="#job_time_estimation_detailed">
                 <i class="icon-time"></i>
                 <span>{{ _('Estimation:') }} <span data-bind="text: estimated_job_time().humanReadable"></span></span>
