SW-359 added the laserhead model to the frontend vars

--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -14,6 +14,7 @@
     var MRBEAM_SW_TIER = "{{ software_tier }}";
     var MRBEAM_WIZARD_TO_SHOW = "{{ wizard_to_show }}";
     var MRBEAM_LASER_HEAD_SERIAL = "{{ laserhead_serial }}";
+    var MRBEAM_LASER_HEAD_MODEL = "{{ laserhead_model }}";
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
