--- a/octoprint_mrbeam/templates/quick_text.jinja2
+++ b/octoprint_mrbeam/templates/quick_text.jinja2
@@ -12,7 +12,36 @@
 				<div class="span6 quicktext-fontname" id="quick_text_dialog_font_name"></div>
 				<div class="btn btn-small span3 quicktext-font-button" data-bind="click: currentQuickTextFontNext"> {{ _('Aa') }} <i class="icon-chevron-right" title="{{ _('Next Font') }}"></i></div>
 			</div>
-			<input id="quick_text_dialog_intensity" class="mrb_slider grayscale quicktext-slider" type="range" min="0" max="255"/>
+			<!--<input id="quick_text_dialog_intensity" class="mrb_slider grayscale quicktext-slider" type="range" min="0" max="255"/>-->
+
+            <div id="quick_text_stroke_and_fill" class="form-horizontal">
+                <div class="control-group">
+                    <label class="control-label">{{ _('Line Color') }}</label>
+                    <div class="controls">
+                        <input type="checkbox" value="stroke" id="quick_text_stroke" checked data-bind="click: _qt_currentQuickTextUpdate()" />
+                        <div id="qt_colorPicker_stroke" class="tinyColorPicker">
+                            <a class="tcp_color"><div class="colorInner"></div></a>
+                            <div class="track"></div>
+                            <ul class="dropdown"><li></li></ul>
+                            <input type="hidden" class="colorInput" id="quick_text_stroke_color" >
+                        </div>
+                    </div>
+                </div>
+
+                <div class="control-group">
+                    <label class="control-label">{{ _('Fill Color') }}</label>
+                    <div class="controls">
+                        <input type="checkbox" value="fill" id="quick_text_fill" data-bind="click: _qt_currentQuickTextUpdate()" />
+                        <div id="qt_colorPicker_fill" class="tinyColorPicker blackWhite">
+                            <a class="tcp_color"><div class="colorInner"></div></a>
+                            <div class="track"></div>
+                            <ul class="dropdown"><li></li></ul>
+                            <input type="hidden" class="colorInput" id="quick_text_fill_brightness">
+                        </div>
+                    </div>
+                </div>
+			</div>
+
             <div id="qt_round_text_section" class="straight">
                 <div  class="btn-group">
                     <div id="quick_text_straight" class="btn active"><img src="/plugin/mrbeam/static/img/straight_text_paths.svg" alt="straight text"/></div>
