--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -32,7 +32,7 @@
         </div>
 
         <div class="control-group">
-            <h5>beamOS & grbl</h5>
+            <h5>BeamOS & grbl</h5>
             <div class="controls">
                 <ul>
                     <div><strong>{{ _('Mr Beam Plugin') }}:</strong> v{{ beamosVersionNumber }}</div>
