Compatible data added to custom materials based on identified laserhead model

--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -442,6 +442,54 @@ li.material_entry span {
   box-sizing: border-box;
 }
 
+li.material_entry.custom.compatible_material::before,
+li.material_entry.custom.compatible_material::after {
+    z-index: 1;
+    position: absolute;
+    top: 3px;
+    font-weight: bold;
+    color: #e25303;
+}
+
+li.material_entry.custom.compatible_material::before {
+    content: attr(data_content);
+    right: 22px;
+    font-size: 15px;
+}
+
+li.material_entry.custom.compatible_material::after {
+    content: "✓";
+    right: 4px;
+    font-size: 20px;
+}
+
+li.material_entry.custom.incompatible_material::before,
+li.material_entry.custom.incompatible_material::after {
+    z-index: 1;
+    position: absolute;
+    font-weight: bold;
+}
+
+li.material_entry.custom.incompatible_material::before {
+    content: attr(data_content);
+    right: 26px;
+    top: 3px;
+    font-size: 15px;
+    color: #e25303;
+}
+
+li.material_entry.custom.incompatible_material::after {
+    content: "!";
+    right: 4px;
+    top: 4px;
+    font-size: 10px;
+    background-color: #e25303;
+    border-radius: 50%;
+    color: #ffffff;
+    padding: 0 8px;
+    height: 17px;
+}
+
 #thickness_list {
   width: 200px;
   white-space: initial;
