--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -587,11 +587,9 @@ li.material_entry span {
 #dialog_vector_graphics_conversion .modal-header h3{
   display: flex;
 }
-#dialog_vector_graphics_conversion .laserhead-model {
+#dialog_vector_graphics_conversion .laserhead-model-icon {
   color: #e25303;
-  font-size: 15px;
-  font-weight: bold;
-  justify-content: center;
+  font-size: 16px;
   margin-left: 15px;
 }
 .modal.modal-left-side {
