SW-393 Show [S] in the working area and material settings header (#1338)
* SW-393 added [S] to working area and materials

Co-authored-by: Josef-MrBeam <josef@mr-beam.org>

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -1170,6 +1170,11 @@ body {
     cursor: default;
 }
 
+.octoprint-container .accordion-heading .laserhead-model-icon {
+    padding-left: 15px;
+    color: #e25303;
+}
+
 .octoprint-container .accordion-heading [class^="icon-"],
 .octoprint-container .accordion-heading [class*=" icon-"] {
     color: #383e42;
