Laserhead changed modal window linked

--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -180,6 +180,7 @@
         {% include 'quick_text.jinja2' %}
         {% include 'quick_shape.jinja2' %}
         {% include 'conversion_dialog.jinja2' %}
+        {% include 'laserhead_changed.jinja2' %}
         <!-- End of dialogs -->
 
         <!-- Overlays -->
