--- a/octoprint_mrbeam/templates/laserhead_changed.jinja2
+++ b/octoprint_mrbeam/templates/laserhead_changed.jinja2
@@ -6,7 +6,7 @@
     <div class="modal-body">
         <div>
             <img src="/plugin/mrbeam/static/img/welcome_dialog/start.png">
-            <h4> {{ _("Your new Mr Beam dreamcut [S] Laserhead has successfully been installed.") }}</h4>
+            <h4> {{ _("Your new Mr Beam dreamcut [S] Laserhead has been successfully installed.") }}</h4>
             <p> {{ _("With this Laserhead you can work now even faster.") }}</p>
             <p> {{ _("This means that we also update the default material settings to the new laserhead as long it is installed to provide you the best possible support. However, we do not update your custom materials, this will need your personal testing and finetuning.") }}</p>
         </div>
