--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -4,7 +4,7 @@
     {#    Download link is language specific  #}
     {% set mrbeamorg_downloads = _('https://mr-beam.org/en/downloads/') %}
 
-    <div class="scrollable" style="padding-bottom:2em; overflow-y: auto; height: calc(100vh - 150px);">
+    <div class="scrollable">
 
         <div class="control-group">
             <h5>{{ product_name }}</h5>
@@ -12,15 +12,21 @@
                 <ul>
                     <div><strong>{{ _('Name') }}:</strong> {{ hostname }}</div>
                     <div><strong>{{ _('Serial number') }}:</strong> {{ serial }}</div>
-                    {% if laserhead_serial %}
-                        <div><strong>{{ _('Laser head') }}:</strong> {{ laserhead_serial }}</div>
-                    {% endif %}
-                    {% if laserhead_model == 'S' %}
-                        <div><strong>{{ _('Laser model') }}:</strong> {{ laserhead_model }}</div>
+                    {% if laserhead_serial or laserhead_model == 'S' %}
+                        <div><strong>{{ _('Laser head') }}:</strong>
+                        <ul class="list-unstyled">
+                        {% if laserhead_serial %}
+                            <li><strong>{{ _('Serial number') }}:</strong> {{ laserhead_serial }}</li>
+                        {% endif %}
+                        {% if laserhead_model == 'S' %}
+                            <li><strong>{{ _('Model') }}:</strong> {{ laserhead_model }}</li>
+                        {% endif %}
+                        </ul>
+                        </div>
                     {% endif %}
                     {% if mac_addrs %}
                     <div><strong>{{ _('Network interfaces') }}:</strong>
-						<ul style="list-style-type: none;">
+						<ul class="list-unstyled">
 							{% for ifc, mac in mac_addrs.iteritems() %}
 							<li>{{ ifc }} (MAC: {{ mac }})</li>
 							{% endfor %}
