--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -665,7 +665,7 @@
                     <img id="laserhead_focus_reminder_image" src="/plugin/mrbeam/static/img/focus_reminder.png">
                     <div id="laserhead_focus_reminder_alert">
                         <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                        <span>{{ _('Reminder: Never remove any components while your Mr Beam is still active! To make sure you’ve turned it off beforehand, remove the key and unplug it from the power source.') }}</span>
+                        <span>{{ _('Reminder: Never remove any components while your Mr Beam is still active! To make sure you’ve turned your Mr Beam off beforehand, remove the key and unplug it from the power source.') }}</span>
                     </div>
                 </div>
                 <div class="modal-footer">
