--- a/octoprint_mrbeam/templates/quick_text.jinja2
+++ b/octoprint_mrbeam/templates/quick_text.jinja2
@@ -7,7 +7,7 @@
         <form role="form" class="form-search" data-bind="submit: function(){$('#quick_text_dialog').modal('hide');}" _lpchecked="1">
             <input type="text" id="quick_text_dialog_text_input" class="input-block quicktext-input" data-bind="textInput: currentQuickText" placeholder="{{ _('QuickText...') }}" autocomplete="off"/>
             <div id="qt_dialog_preview">
-                <svg id="qt_dialog_preview_svg" width="300" height="28" style="width: 50%; height:20px; overflow:visible;">
+                <svg id="qt_dialog_preview_svg" viewBox="0 0 100 33" style="width: 100%; height:3em; overflow:visible;">
                     <use href="" transform="" style="pointer-events: none" />
                 </svg>
             </div>
