a working prototype. TODOs: macOS compatibility, code cleanup, testing.

--- a/octoprint_mrbeam/static/css/tab_workingarea.css
+++ b/octoprint_mrbeam/static/css/tab_workingarea.css
@@ -788,6 +788,7 @@ body.activitySpinnerActive #activitySpinnerOverlay i {
   transition: opacity ease-out;
   transition-duration: 0.2s;
   transition-delay: 0s;
+  caret-color: transparent;
 }
 
 #activitySpinnerOverlay i {
