--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -187,6 +187,7 @@
         {% include 'overlays/dragndrop.jinja2' %}
         {% include 'overlays/offline.jinja2' %}
         {% include 'activity_spinner_overlay.jinja2' %}
+        {% include 'paste_overlay.jinja2' %}
         <!-- End of overlays -->
 
 		 <!-- Generic plugin template files -->
