--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -1,4 +1,4 @@
-				<div class="tab-pane active" id="workingarea">
+                <div class="tab-pane active" id="workingarea">
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<div class="span4 accordion full-col" style="margin-bottom:0;">
@@ -80,7 +80,7 @@
 												{{ _('Do not power off the machine during the flashing process.') }}
 											</div>
 											<div data-bind="visible: !state.isLocked() && !state.isFlashing() ">
-											<div class="accordion-heading" id="mrb_state_header">
+											<div class="accordion-heading">
 												<a href="#control_btns" class="dropdown" data-toggle="collapse" aria-expanded="false">
 												    <i class="icon-screenshot"></i> {{ _('Position') }}:
 												</a>
